--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -39,3 +39,10 @@ input {
   width: 10rem;
   text-align: center;
 }
+
+.controls {
+  visibility: hidden;
+}
+li:hover > .controls {
+  visibility: visible;
+}
