--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,28 @@
+/* @TODO: host fonts locally */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply m-0 box-border p-0;
+  }
+
+  h1 {
+    @apply text-3xl font-semibold;
+  }
+
+  h2 {
+    @apply text-2xl font-semibold;
+  }
+
+  input {
+    border: none;
+    outline: none;
+  }
+}
 
 @layer components {
   .btn {
