--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,4 @@
-/* @TODO: host fonts locally */
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap");
+@import "./fonts.css";
 
 @tailwind base;
 @tailwind components;
